--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,3 +22,8 @@ android.enableJetifier=true
 
 appVersion=20.2.0
 sdkVersion=2.8.0
+
+MYAPP_UPLOAD_STORE_FILE=upload.keystore
+MYAPP_UPLOAD_KEY_ALIAS=upload-key
+MYAPP_UPLOAD_STORE_PASSWORD=Afro-MeetAndroidApp2020
+MYAPP_UPLOAD_KEY_PASSWORD=Afro-MeetAndroidApp2020
