--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '11.0'
-workspace 'jitsi-meet'
+workspace 'afro-meet'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'jitsi-meet' do
+target 'afro-meet' do
   project 'app/app.xcodeproj'
 
   pod 'Crashlytics', '~> 3.14.0'
